# incident-investigator

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  INVARIANTS.md  README.md  STATUS.md  WEEK01_PLAN.md  WEEK01_PROMPT.md  WEEK02_PLAN.md  WEEK02_PROMPT.md  WEEK03_PLAN.md  WEEK03_PROMPT.md  WEEK04_PLAN.md  WEEK04_PROMPT.md  WEEK05_PLAN.md  WEEK05_PROMPT.md  WEEK06_PLAN.md  WEEK06_PROMPT.md  WEEK07_PLAN.md  WEEK07_PROMPT.md  WEEK08_PLAN.md  WEEK08_PROMPT.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: architecture.md  contracts.md  sequence.md
scripts/: dev_down.ps1  dev_up.ps1  run_scenarios.py  run_week.ps1  show_setup.py  verify.ps1
src/investigator/: __init__.py  config.py
tests/integration/: conftest.py  test_db_connection.py  test_postgres_flow.py  test_postgres_migrations.py
tests/test_api/: test_approvals_api.py  test_feedback_api.py  test_incidents_list_api.py  test_ingest.py  test_investigate.py  test_observability_api.py  test_openapi.py
tests/test_approval/: test_policy.py
tests/test_classification/: test_rules.py
tests/test_config/: test_settings.py
tests/test_contracts/: test_response_compliance.py
tests/test_db/: test_approval_row.py  test_orm_models.py
tests/test_deployment/: test_ci_workflow.py  test_docker_config.py  test_verify_script.py
tests/test_diagnosis/: test_engine.py
ui/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
ui/src/: App.css  App.jsx  (+1 more)
(+84 files in other folders)
